--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <link rel="stylesheet" href="src/CSS/style.css" />
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <main class="console">
+      <div class="console__screen console__screen--screen-1">
+        <div>
+          <h1 class="title">Bowmaster Legends</h1>
+          <label for="">Start Game</label>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
