Make targets appear at random locations in the game screen and make them pop on click

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
           <input type="radio" class="target" />
           <input type="radio" class="target" />
           <input type="radio" class="target" />
+          <!-- <input type="radio" class="target" />
           <input type="radio" class="target" />
           <input type="radio" class="target" />
           <input type="radio" class="target" />
           <input type="radio" class="target" />
           <input type="radio" class="target" />
           <input type="radio" class="target" />
-          <input type="radio" class="target" />
-        </div>
+        </div> -->
       </section>
 
       <section class="console__screen console__screen--screen-3">
