Added ending screen to the game, with button to restart the game

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </section>
 
       <section class="console__screen console__screen--screen-3">
-        <label for="screen-1">game end</label>
+        <button type="reset">Restart!</button>
       </section>
     </form>
   </body>
