added highscore using css counter

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <section class="console__screen console__screen--screen-1">
         <div>
-          <h1 class="title">Bowmaster Legends</h1>
+          <h1 class="title"><span>B</span>owmaster <span>L</span>egends</h1>
           <label for="screen-2">Start Game</label>
         </div>
       </section>
@@ -25,17 +25,18 @@
           <input type="radio" class="target" />
           <input type="radio" class="target" />
           <input type="radio" class="target" />
-          <!-- <input type="radio" class="target" />
           <input type="radio" class="target" />
           <input type="radio" class="target" />
           <input type="radio" class="target" />
           <input type="radio" class="target" />
           <input type="radio" class="target" />
           <input type="radio" class="target" />
-        </div> -->
+          <input type="radio" class="target" />
+        </div>
       </section>
 
       <section class="console__screen console__screen--screen-3">
+        <div class="highscore">Score</div>
         <button type="reset">Restart!</button>
       </section>
     </form>
