Now game will restart properly when 'restart' button is clicked

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="src/CSS/style.css" />
   </head>
   <body>
-    <form class="console">
+    <form method="get" action="" class="console">
       <input type="radio" name="screen" id="screen-1" checked />
       <input type="radio" name="screen" id="screen-2" />
       <input type="radio" name="screen" id="screen-3" />
@@ -37,7 +37,7 @@
 
       <section class="console__screen console__screen--screen-3">
         <div class="highscore">Score</div>
-        <button type="reset">Restart!</button>
+        <button type="submit">Restart!</button>
       </section>
     </form>
   </body>
