game properly display high score at the end of the game.

--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
 
       <section class="console__screen console__screen--screen-2">
         <div class="console__screen__game">
-          <input type="radio" class="target" />
-          <input type="radio" class="target" />
-          <input type="radio" class="target" />
-          <input type="radio" class="target" />
-          <input type="radio" class="target" />
-          <input type="radio" class="target" />
-          <input type="radio" class="target" />
-          <input type="radio" class="target" />
-          <input type="radio" class="target" />
-          <input type="radio" class="target" />
+          <input type="radio" class="target" tabindex="-1" />
+          <input type="radio" class="target" tabindex="-1" />
+          <input type="radio" class="target" tabindex="-1" />
+          <input type="radio" class="target" tabindex="-1" />
+          <input type="radio" class="target" tabindex="-1" />
+          <input type="radio" class="target" tabindex="-1" />
+          <input type="radio" class="target" tabindex="-1" />
+          <input type="radio" class="target" tabindex="-1" />
+          <input type="radio" class="target" tabindex="-1" />
+          <input type="radio" class="target" tabindex="-1" />
         </div>
       </section>
 
       <section class="console__screen console__screen--screen-3">
-        <div class="highscore">Score</div>
+        <div class="highscore">You</div>
         <button type="submit">Restart!</button>
       </section>
     </form>
