Changed the game screen from container-type to non-container and use left and bottom to randomly position targets on the screen.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </section>
 
       <section class="console__screen console__screen--screen-3">
-        <div class="highscore">You</div>
+        <div class="highscore">Score</div>
         <button type="submit">Restart!</button>
       </section>
     </form>
